--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
+    "serverless-http": "^3.2.0",
     "svix": "^1.67.0"
   },
   "devDependencies": {
