--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,11 @@
 MONGODB_URI="mongodb+srv://vky2334:123hotelfinder@hotelfinder.mvvtlrx.mongodb.net"
 
 #Clerk Keys 
-CLERK_PUBLISHABLE_KEY=pk_test_ZGVmaW5pdGUtc2t5bGFyay0yLmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_gSZsZ30WvkpGMLpD7dRLQDUH3r2FiRHMpjTyhM8ZoB
+# CLERK_PUBLISHABLE_KEY=pk_test_ZGVmaW5pdGUtc2t5bGFyay0yLmNsZXJrLmFjY291bnRzLmRldiQ
+# CLERK_SECRET_KEY=sk_test_gSZsZ30WvkpGMLpD7dRLQDUH3r2FiRHMpjTyhM8ZoB
 
 CLERK_WEBHOOK_SECRET=whsec_UKj77nJyayV0QzcB42JWFPfPXpo72ULC
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZGVmaW5pdGUtc2t5bGFyay0yLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_gSZsZ30WvkpGMLpD7dRLQDUH3r2FiRHMpjTyhM8ZoB
+CLERK_WEBHOOK_SIGNING_SECRET=whsec_123
